--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   build_runner: 2.4.10
   injectable_generator: 2.6.1
+  mocktail: ^1.0.4
+  http_mock_adapter: ^0.6.1
+  bloc_test: ^9.1.7
+  hrk_flutter_test_batteries: ^0.8.0
 
 flutter:
   uses-material-design: true
